--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <main>
         <div class="nav">
             <div id="logo" class="borde"> 
-            <img src="./imagenes/KPK LOGO 2022-34.png" alt="">
+            <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
             </div>
             <div id="entrada" class="borde">
-                <a href="">🍤</a>
+                <a href="#">🍤</a>
             </div>
             <div id="woks" class="borde">
                 <a href="./pages/woks.html">🍜</a>
             </div>
             <div id="sushi" class="borde">
-                <a href="">🍣</a>
+                <a href="#">🍣</a>
             </div>
             <div id="contacto" class="borde">
-                <a href="">📞</a>
+                <a href="#">📞</a>
             </div>
         </div>
     </main>
