--- a/pages/woks.html
+++ b/pages/woks.html
@@ -43,7 +43,7 @@
             <h2>Woks</h2>
             <h2 id="wok-logo">🍜</h2>
             <div class="wok-p">
-              <p>Comida caliente cocinada en wok, con un salteado de verduras y la opción que elijas para acompañar, salteados en salsa base. Al final de la coccioón se lo decora con aceite de sesamo, huevo revuelto, verdeo y semillas de sesamo doradas previamente.</p>
+              <p>Comida caliente cocinada en wok, con un salteado de verduras y la opción que elijas para acompañar, salteados en salsa base. Al final de la cocción se lo decora con aceite de sesamo, huevo revuelto, verdeo y semillas de sesamo doradas previamente.</p>
               <p> 🥡 Chow Mein = contiene fideos caseros integrados a la salsa.</p>
               <p> 🍚 Chow Fan = contiene el arroz está integrado con la salsa.</p>
               <p> 🍥 Chow Suey = contiene el arroz separado del salteado de verduras y sin mezclar con la salsa.</p>
