--- a/pages/woks.html
+++ b/pages/woks.html
@@ -37,7 +37,7 @@
       </nav>
       <!--fin barra nav-->
       <!--inicio main-->
-      <main class="wok-main">
+      <main>
         <div>
           <div class="wok-menu">
             <h2>Woks</h2>
