--- a/pages/woks.html
+++ b/pages/woks.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">Sushi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link disabled">Contacto</a>
               </li>
             </ul>
           </div>
