--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <link rel="stylesheet" href="./estilos/estilo.css">
     <title>Kanpeki Sushi</title>
 </head>
-<body>
+<body class="inicio-body">
     <!--inicio nav cuadriculado-->
     <main>
         <div class="nav">
-            <div id="logo" class="borde"> 
+            <div id="logo"> 
             <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
             </div>
-            <div id="entrada" class="borde">
-                <a href="#">🍤</a>
+            <div id="entrada" class="boton">
+                <a href="#">Entradas</a>
             </div>
-            <div id="woks" class="borde">
-                <a href="./pages/woks.html">🍜</a>
+            <div id="woks" class="boton">
+                <a href="./pages/woks.html">Woks & Bowls</a>
             </div>
-            <div id="sushi" class="borde">
-                <a href="#">🍣</a>
+            <div id="sushi" class="boton">
+                <a href="#">Sushi & Rolls</a>
             </div>
-            <div id="contacto" class="borde">
-                <a href="#">📞</a>
+            <div id="contacto" class="boton">
+                <a href="#">Conocenos</a>
             </div>
         </div>
     </main>
