--- a/pages/woks.html
+++ b/pages/woks.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
     <title>Woks & Bolws</title>
@@ -12,44 +13,58 @@
 <body class="body-wok">
     <!--inicio barra nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Entradas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sushi</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Entradas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sushi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
       <!--fin barra nav-->
       <!--inicio main-->
-      <main>
-        <div>
+      <main class="wok-main">
           <div class="wok-menu">
-            <h2>Woks</h2>
-            <h2 id="wok-logo">🍜</h2>
+            <div id="wok-logo">
+            <img src="../imagenes/fuego.png" alt="fuego">
+            <h2>Deliwoks</h2>
+            </div>
             <div class="wok-p">
-              <p>Comida caliente cocinada en wok, con un salteado de verduras y la opción que elijas para acompañar, salteados en salsa base. Al final de la cocción se lo decora con aceite de sesamo, huevo revuelto, verdeo y semillas de sesamo doradas previamente.</p>
-              <p> 🥡 Chow Mein = contiene fideos caseros integrados a la salsa.</p>
-              <p> 🍚 Chow Fan = contiene el arroz está integrado con la salsa.</p>
-              <p> 🍥 Chow Suey = contiene el arroz separado del salteado de verduras y sin mezclar con la salsa.</p>
+                <div id="arroz">Arroz frito (con verdeo,zanahoria, huevo y jamón)</div>
+                <div id="parroz">$1350</div>
+                <div id="agrid">Cerdo o Pollo Agridulce</div>
+                <div id="pagrid">$1400</div>
+                <div id="mein">Chop Mein</div>
+                <div id="pmein">Opcional: Fideos de arroz <span>$300</span></div>
+                <div id="fan">Chop Fan</div>
+                <div id="suey">Chop Suey</div>
+                <div id="hongo">Hongos</div>
+                <div id="prehongo">$1400</div>
+                <div id="pollo">Pollo</div>
+                <div id="prepollo">$1400</div>
+                <div id="cerdo">Cerdo</div>
+                <div id="precerdo">$1400</div>
+                <div id="lango">Langostinos</div>
+                <div id="prelango">$1500</div>
+                <div id="salm">Salmón o Mariscos</div>
+                <div id="presalm">$1500</div>
+                <div id="lomo">Lomo</div>
+                <div id="prelomo">$1500</div>
             </div>
           </div>
-        </div>
       </main>
       <!--inicio de footer-->
       <footer class="foot" id="foot-wok">
@@ -73,6 +88,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
