--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,900&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./estilos/estilo.css">
     <title>Kanpeki Sushi</title>
@@ -17,13 +19,13 @@
             <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
             </div>
             <div id="entrada" class="boton">
-                <a href="#">Entradas</a>
+                <a href="./pages/woks.html">Entradas & woks</a>
             </div>
             <div id="woks" class="boton">
-                <a href="./pages/woks.html">Woks & Bowls</a>
+                <a href="./pages/sushi.html">Sushi & Bowls</a>
             </div>
             <div id="sushi" class="boton">
-                <a href="#">Sushi & Rolls</a>
+                <a href="./pages/rolls.html">Rolls & Piezas especiales</a>
             </div>
             <div id="contacto" class="boton">
                 <a href="#">Conocenos</a>
