--- a/pages/woks.html
+++ b/pages/woks.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,900&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <title>Woks & Bolws</title>
+    <title>Entradas & Woks</title>
 </head>
-<body class="body-wok">
+<body class="body-menu">
     <!--inicio barra nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
@@ -23,10 +25,10 @@
             <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Entradas</a>
+            <a class="nav-link" href="../pages/sushi.html">Sushi & Bowls</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sushi</a>
+            <a class="nav-link" href="../pages/rolls.html">Rolls & Piezas Especiales</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Contacto</a>
@@ -36,36 +38,64 @@
     </nav>
       <!--fin barra nav-->
       <!--inicio main-->
-      <main class="wok-main">
-          <div class="wok-menu">
-            <div id="wok-logo">
-            <img src="../imagenes/fuego.png" alt="fuego">
-            <h2>Deliwoks</h2>
+      <main class="menu-main">
+        <div class="menu-carta">
+            <div class="menu-titulo">
+                <h2>Entradas</h2>
+            </div>
+            <div id="entrada-p">
+                <div class="entrada_menu"> 
+                    <h3 id="spring"> <pre><b>Spring Roll</b> <span>x2</span></pre> </h3>
+                    <div id="vegg"><b>Veggie</b></div>
+                    <div class="precio" id="pvegg">$400</div>
+                    <div id="cerd"><b>Cerdo</b></div>
+                    <div class="precio" id="pcerd">$420</div>
+                    <div id="sal"><b>Salmón</b></div>
+                    <div class="precio" id="psal">$450</div>
+                </div>
+                <div class="gyoza">
+                    <div> <pre><b>Gyozas</b> <span>x4</span></pre> </div>
+                    <div class="precio">$500</div>
+                </div>
+                <div class="gyoza">
+                    <div> <pre><b>Langostinos apanados</b> <span>x4</span></pre> </div>
+                    <div class="precio">$650</div>
+                </div>
+                <div class="gyoza">
+                    <div> <pre><b>Ravioles fritos de salmón</b> <span>x4</span></pre> </div>
+                    <div class="precio">$550</div>
+                </div>
+            </div>
+            <div>
+      </main>
+      <section class="menu-main">
+          <div class="menu-carta">
+            <div class="menu-titulo">
+              <h2>Deliwoks</h2>
             </div>
             <div class="wok-p">
-                <div id="arroz">Arroz frito (con verdeo,zanahoria, huevo y jamón)</div>
-                <div id="parroz">$1350</div>
-                <div id="agrid">Cerdo o Pollo Agridulce</div>
-                <div id="pagrid">$1400</div>
-                <div id="mein">Chop Mein</div>
-                <div id="pmein">Opcional: Fideos de arroz <span>$300</span></div>
-                <div id="fan">Chop Fan</div>
-                <div id="suey">Chop Suey</div>
-                <div id="hongo">Hongos</div>
-                <div id="prehongo">$1400</div>
-                <div id="pollo">Pollo</div>
-                <div id="prepollo">$1400</div>
-                <div id="cerdo">Cerdo</div>
-                <div id="precerdo">$1400</div>
-                <div id="lango">Langostinos</div>
-                <div id="prelango">$1500</div>
-                <div id="salm">Salmón o Mariscos</div>
-                <div id="presalm">$1500</div>
-                <div id="lomo">Lomo</div>
-                <div id="prelomo">$1500</div>
+                <div id="arroz"> <b>Arroz frito,</b> con verdeo,zanahoria, huevo y jamón.</div>
+                <div id="parroz" class="precio">$1350</div>
+                <div id="agrid"> <b>Cerdo</b> o <b>Pollo Agridulce</b> </div>
+                <div id="pagrid" class="precio">$1400</div>
+                <div id="pmein"> <b>🥑Opcional:</b>Fideos de arroz <span class="precio">$300</span></div>
+                <div id="suey" class="grafitti">Chop Suey  -  Chow Fan  -  Chow mein</div>
+                <div id="hongo"> <b>Hongos,</b>con vegetales y huevo. </div>
+                <div id="prehongo" class="precio">$1400</div>
+                <div id="pollo"> <b>Pollo,</b>con vegetales y huevo. </div>
+                <div id="prepollo" class="precio">$1400</div>
+                <div id="cerdo"> <b>Cerdo,</b>con vegetales y huevo. </div>
+                <div id="precerdo" class="precio">$1400</div>
+                <div id="lango"> <b>Langostinos,</b>con vegetales y huevo. </div>
+                <div id="prelango" class="precio">$1500</div>
+                <div id="salm"> <b>Salmón o Mariscos,</b>con vegetales y huevo. </div>
+                <div id="presalm" class="precio">$1500</div>
+                <div id="lomo"> <b>Lomo,</b>con vegetales y huevo. </div>
+                <div id="prelomo" class="precio">$1500</div>
             </div>
           </div>
-      </main>
+      </section>
+      
       <!--inicio de footer-->
       <footer class="foot" id="foot-wok">
         <div class="redes">
