--- a/pages/sushi.html
+++ b/pages/sushi.html
@@ -67,8 +67,8 @@
                 <div><h2>Sushi</h2></div>
             </div>
             <div class="sushi_borde">
-                <div class="sushi_menu">
-                    <h3 id="deli">Delicombi</h3>
+                <div class="sushi_menu"><!--Combi 4variedades-->
+                    <h3 id="deli"> <b>Delicombi</b> </h3>
                     <p id="p"><b>4 variedades</b>(Salmón, kanikama, langostinos y salmón cocido).</p>
                     <div id="x12" class="cantidad">x12</div>
                     <div class="precio" id="p12">$2000</div>
@@ -82,37 +82,38 @@
                     <div class="precio" id="p72">$12000</div>
                     <div id="p2">🥑 <b>Piezas a elección de la Sushiwoman.</b> </div>
                 </div>
-                <div class="only_salmon">
-                    <div><h3><b>Combi</b> <span>Only Salmon</span></h3></div>
-                    <div><pre><b class="cantidad">x12</b><b>   2 geishas, 2 nigiris, 2 tamagos, 
+                <div class="only_salmon"><!--Combi Only Salmon-->
+                    <div id="only"><h3><b>Combi Only Salmon</b></h3></div>
+                    <div id="on12"><pre><b class="cantidad">x12</b><b>   2 geishas, 2 nigiris, 2 tamagos, 
                     2 sashimis y 4 piezas roll.</b> </pre> </div>
-                    <div class="precio">$2750</div>
-                    <div><pre><b class="cantidad">x24</b><b>   2 nigiris, 2 geishas, 2 sashimis, 
+                    <div id="on12p" class="precio">$2750</div>
+                    <div id="on24"><pre><b class="cantidad">x24</b><b>   2 nigiris, 2 geishas, 2 sashimis, 
                     4 tamagos y 14 piezas roll.</b> </b></pre> </div>
-                    <div class="precio">$5500</div>
-                    <div><pre><b class="cantidad">x36</b><b>  3 geishas, 3 nigiris, 3 tamagos, 
+                    <div id="on24p" class="precio">$5500</div>
+                    <div id="on36"><pre><b class="cantidad">x36</b><b>  3 geishas, 3 nigiris, 3 tamagos, 
                     3 sashimis y 24 piezas roll.</b></pre> </div>
-                    <div class="precio">$8250</div>
+                    <div id="on36p" class="precio">$8250</div>
                 </div>
-                <div class="premium">
+                <div class="combi_premium"><!--Combi Premium-->
                     <h3 id="prem"><b>Combi Premium</b></h3>
                     <p id="pprem">De langostinos y salmón crudo.</p>
-                    <div id="x12p"><b class="cantidad">x12</b> </div>
+                    <div id="p12"><b class="cantidad">x12</b> </div>
                     <div class="precio" id="p12p">$2350</div>
-                    <div id="x24p"><b class="cantidad">x24</b> </div>
+                    <div id="p24"><b class="cantidad">x24</b> </div>
                     <div class="precio" id="p24p">$4700</div>
-                    <div id="x36p"> <b class="cantidad">x36</b> </div>
+                    <div id="p36"> <b class="cantidad">x36</b> </div>
                     <div class="precio" id="p36p">$7050</div>
                 </div>
-                <div class="combi_veggie">
-                    <h3><b>Combi Veggie</b> <b>x12</b> </h3>
-                    <div><b>3 tamagos, 3 piezas roll, 2 geishas de zanahoria, 2 nigiris de hongos y 2 nigiris de palta.</b></div>
-                    <div class="precio">$1900</div>
+                <div class="combi_veggie"><!--Combi Veggie-->
+                    <h3 id="veg"><b>Combi Veggie</b> <b>x12</b> </h3>
+                    <div id="vegp"><b>3 tamagos, 3 piezas roll, 2 geishas de zanahoria, 2 nigiris de hongos y 2 nigiris de palta.</b></div>
+                    <div id="pvegp" class="precio">$1900</div>
                 </div>
-                <div class="degust">
-                    <div><h3><pre><b>Combi Degustación</b> <b>x6</b></pre></h3>
-                    <div><pre><span>$1600</span> <b>🥑Piezas a elección de la Sushiwoman</b></pre></div>
-                </div>
+                <div class="degust"><!--Combi Degustación-->
+                    <div id="d6"><h3><pre><b>Combi Degustación</b> <b>x6</b></pre></h3>
+                    <div id="p6" class="precio">$1600</div>
+                    <div id="d6p"><b>🥑Piezas a elección de la Sushiwoman</b> </div>
+                </div>    
             </div>
         </div>
     </section>
