--- a/pages/woks.html
+++ b/pages/woks.html
@@ -43,7 +43,7 @@
             <div class="menu-titulo">
                 <h2>Entradas</h2>
             </div>
-            <div id="entrada-p">
+            <div>
                 <div class="entrada_menu"> 
                     <h3 id="spring"> <pre><b>Spring Roll</b> <span>x2</span></pre> </h3>
                     <div id="vegg"><b>Veggie</b></div>
