--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
             </div>
             <div id="entrada" class="boton">
-                <a href="./pages/woks.html">Entradas & woks</a>
+                <a href="./pages/woks.html">Entradas/Woks</a>
             </div>
             <div id="woks" class="boton">
                 <a href="./pages/sushi.html">Sushi & Bowls</a>
             </div>
             <div id="sushi" class="boton">
-                <a href="./pages/rolls.html">Rolls & Piezas especiales</a>
+                <a href="./pages/rolls.html">Roles</a>
             </div>
             <div id="contacto" class="boton">
                 <a href="#">Conocenos</a>
