--- a/pages/sushi.html
+++ b/pages/sushi.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </nav>
-    <!--fin barra nav-->
+<!--fin barra nav-->
     </header>
     <main class="menu-main">
         <div class="menu-carta">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="combi_premium"><!--Combi Premium-->
                     <h3 id="prem"><b>Combi Premium</b></h3>
-                    <p id="pprem">De langostinos y salmón crudo.</p>
+                    <p id="pprem">(langostinos y salmón crudo).</p>
                     <div id="p12"><b class="cantidad">x12</b> </div>
                     <div class="precio" id="p12p">$2350</div>
                     <div id="p24"><b class="cantidad">x24</b> </div>
@@ -110,7 +110,7 @@
                     <div id="pvegp" class="precio">$1900</div>
                 </div>
                 <div class="degust"><!--Combi Degustación-->
-                    <div id="d6"><h3><pre><b>Combi Degustación</b> <b>x6</b></pre></h3>
+                    <div id="d6"><h3><pre><b>Degustación</b> <b>x6</b></pre></h3>
                     <div id="p6" class="precio">$1600</div>
                     <div id="d6p"><b>🥑Piezas a elección de la Sushiwoman</b> </div>
                 </div>    
