--- a/pages/rolls.html
+++ b/pages/rolls.html
@@ -12,124 +12,120 @@
     <link rel="stylesheet" href="../estilos/estilo.css">
     <title>Rolls & Piezas especiales</title>
 </head>
-<body class="body-menu">
+<body class="body-menu" id="body_rolls">
     <header>
-        <!--inicio barra nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
+<!--inicio barra nav-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="../pages/woks.html">Entradas & Woks</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/sushi.html">Sushi & Bowls</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-        <!--fin barra nav-->
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/sushi.html">Sushi & Bowls</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Conocenos</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+<!--fin barra nav-->
     </header>
         <main class="menu-main">
-            <div class="menu-carta">
+            <div class="menu-carta" id="menu_rolls">
                 <div class="menu-titulo">
-                    <h2>Sushi Rolls</h2>
-                    <h3>x9u.</h3>
+                    <h2> <pre>Sushi Rolls x9u.</pre></h2>
                 </div>
                 <div><b>New York roll,</b> salmón fresco, pepino y palta.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>California roll,</b> kanikama, pepino, palta y queso.</div>
-                <div>$1800</div>
+                <div class="precio">$1800</div>
                 <div><b>SPF roll,</b> salmón ahumado, palta y queso.</div>
-                <div>$2000</div>
+                <div class="precio">$2000</div>
                 <div><b>Buenos Aires roll,</b> salmón, palta, queso y salsa Buenos Aires.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Ebi roll,</b> langos apanados en panko, palta, queso y mayo siracha por fuera.</div>
-                <div>$1850</div>
+                <div class="precio">$1850</div>
                 <div><b>Veggie roll,</b> hongos, zanahoria, palta, queso y tamago.</div>
-                <div>$1800</div>
+                <div class="precio">$1800</div>
                 <div><b>King salmon roll,</b> salmón en panko, con mango, palta, ciboulette y salsa teriyaki.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Mango roll,</b> salmón, mango, queso y sésamo negro por fuera.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Phila roll,</b> salmón y phila con sésamo negro por fuera.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Ebi orange roll,</b> langos, palta, queso y salmón por fuera con ralladura de cítricos.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Ebi maki roll,</b> langos, palta, zanahoria, verdeo, queso y salmón por fuera.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Ebi crazy roll,</b> langos, palta, queso, salmón cocido por fuera con togarashi y salsa maracuyá.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Spicy tamago roll,</b> tamago, palta, queso con una cobertura de salmón y mayo de wasabi. </div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Mex roll,</b> salmón, queso, verdeo, guacamole y mermelada de rocoto.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>Futurama roll,</b> langos, queso saborizado con miso y cebolla de verdeo, con salsa de mostaza y miel por fuera.</div>
-                <div>$1850</div>
+                <div class="precio">$1850</div>
                 <div><b>Mousse roll,</b> salmón cocido, cebolla de verdeo y morada, cream chesse, con una lluvia de batatas fritas por fuera.</div>
-                <div>$1700</div>
+                <div class="precio">$1700</div>
                 <div><b>Pico de gallo roll,</b> langos, zanahoria, palta, queso con salsa de pico de gallo con mango y batatas fritas por fuera.</div>
-                <div>$1850</div>
+                <div class="precio">$1850</div>
                 <div><b>Avocado roll,</b> langos apanados, queso crema y verdeo, palta por fuera con mayo togarashi.</div>
-                <div>$1850</div>
+                <div class="precio">$1850</div>
                 <div><b>Ebi lime,</b> langos apanados, pepino y palta. Por fuera una lámina de salmón y lima.</div>
-                <div>$1900</div>
+                <div class="precio">$1900</div>
                 <div><b>California mousse,</b> kanikama, queso crema, verdeo y pepino.</div>
-                <div>$1800</div>
+                <div class="precio">$1800</div>
                 <div><b>King cheese,</b> salmón apanado, queso crema y palta.</div>
-                <div>$1900</div>
-                <div><b>Hot rolls,</b> transformá tus rolls favoritos en hot.</div>
-                <div>$250</div>
+                <div class="precio">$1900</div>
+                <div class="hot_roll"><b>Hot roll,</b> tu roll favorito apanado.</div>
+                <div class="precio">$250</div>
             </div>
         </div>
     </main>
 
-    <section class="menu-main">
-        <div class="menu-carta">
-            <div class="menu-titulo">
-                <h2>Sushi Rolls</h2>
-                <h3>x5u.</h3>
+    <section class="menu-main" >
+        <div class="menu-carta" id="menu_cinco">
+            <div class="menu-titulo" >
+                <h2><pre>Sushi Rolls x5u.</pre></h2>
             </div>
             <div><b>Tamago,</b> salmón, palta y queso.</div>
-            <div>$1000</div>
+            <div class="precio">$1000</div>
             <div><b>Tamago salmón ahumado</b></div>
-            <div>$1100</div>
+            <div class="precio">$1100</div>
             <div><b>Tamago king,</b> salmón apanado, palta y queso.</div>
-            <div>$1100</div>
+            <div class="precio">$1100</div>
             <div><b>Tamago ebi,</b> langostinos apanados, palta y queso.</div>
-            <div>$1000</div>
+            <div class="precio">$1000</div>
             <div><b>Tamago veggie,</b> hongos, zanahoria, verdeo, palta y queso.</div>
-            <div>$960</div>
+            <div class="precio">$960</div>
             <div><b>Placer real roll,</b> tamago, palta, phila, lámina de salmón por fuera con hilos de batata y salsa maracuya.</div>
-            <div>$1020</div>
+            <div class="precio">$1020</div>
             <div><b>Geishas,</b> salmón, palta y queso o Salmón, mango y queso.</div>
-            <div>$1000</div>
+            <div class="precio">$1000</div>
             <div><b>Geishas boom,</b> rellenas con queso saborizado con miso y verdeo, fritas en tempura.</div>
-            <div>$1020</div>
+            <div class="precio">$1020</div>
             <div><b>Geishas spicy,</b> lámina de salmón, queso y salsa maracuya spicy.</div>
-            <div>$1000</div>
+            <div class="precio">$1000</div>
             <div><b>Nigiris,</b> de salmón fresco.</div>
-            <div>$1000</div>
+            <div class="precio">$1000</div>
             <div><b>Nigiris flambeados,</b> con mermelada de rocoto y verdeo.</div>
-            <div>$1020</div>
+            <div class="precio">$1020</div>
             <div><b>Sashimi,</b> corte de salmón.</div>
-            <div>$1000</div>
-            <div><b>Salsa extra</b></div>
-            <div>$150</div>
-            <div><b>Wasabi extra</b></div>
-            <div>$130</div>
+            <div class="precio">$1000</div>
+            <div class="salsa_wasabi"> <pre> <b>Salsa extra</b> <b>Wasabi extra</b> </pre> </div>
+            <div class="precio">$150-$130</div>
         </div>
     </section>
-    <!--inicio de footer-->
+<!--inicio de footer-->
     <footer class="foot" id="foot-wok">
         <div class="redes">
             <h3 >Redes Sociales</h3>
