--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a href="./pages/sushi.html">Sushi & Bowls</a>
             </div>
             <div id="sushi" class="boton">
-                <a href="./pages/rolls.html">Roles</a>
+                <a href="./pages/rolls.html">Rolls</a>
             </div>
             <div id="contacto" class="boton">
-                <a href="#">Conocenos</a>
+                <a href="./pages/contacto.html">Conocenos</a>
             </div>
         </div>
     </main>
