--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,12 +32,13 @@
                         <a class="nav-link" href="../pages/sushi.html">Sushi & Bowls</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/rolls.html">Rolls</a>
+                        <a class="nav-link" href="../pages/rolls.html">Rolls & Piezas Especiales</a>
                     </li>
                 </ul>
             </div>
         </nav>
 <!--fin barra nav-->
+    <a href="#" class="boton_flotante" id="boton_conocenos"><img src="../imagenes/gatito.png" alt="gatito"></a>
     </header>
     <main class="menu-main">
         <div class="menu-carta">
