--- a/pages/rolls.html
+++ b/pages/rolls.html
@@ -38,6 +38,7 @@
             </div>
         </nav>
 <!--fin barra nav-->
+    <a href="#" class="boton_flotante" id="boton_sushi"><img src="../imagenes/sushi.png" alt="sushi"></a>
     </header>
         <main class="menu-main">
             <div class="menu-carta" id="menu_rolls">
