--- a/pages/woks.html
+++ b/pages/woks.html
@@ -31,12 +31,14 @@
             <a class="nav-link" href="../pages/rolls.html">Rolls & Piezas Especiales</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Contacto</a>
+            <a class="nav-link" href="../pages/contacto.html">Conocenos</a>
           </li>
         </ul>
       </div>
     </nav>
       <!--fin barra nav-->
+      <!--Boton flotante-->
+      <a href="#" class="boton_flotante"><img src="../imagenes/fuego.png" alt="fuego"></a>
       <!--inicio main-->
       <main class="menu-main">
         <div class="menu-carta">
