--- a/pages/sushi.html
+++ b/pages/sushi.html
@@ -32,12 +32,13 @@
                     <a class="nav-link" href="../pages/rolls.html">Rolls & Piezas Especiales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Contacto</a>
+                    <a class="nav-link" href="../pages/contacto.html">Conocenos</a>
                 </li>
             </ul>
         </div>
     </nav>
 <!--fin barra nav-->
+    <a href="#" class="boton_flotante"><img src="../imagenes/palta.png" alt="palta"></a>
     </header>
     <main class="menu-main">
         <div class="menu-carta">
