--- a/pages/woks.html
+++ b/pages/woks.html
@@ -50,7 +50,7 @@
         <section class="menu-main" >
         <div class="menu-carta" >
             <div class="menu-titulo">
-                <h2 class="animate__animated animate__backInUp">Entradas</h2>
+                <h2 class="animate__animated animate__backInLeft">Entradas</h2>
             </div>
             <div>
                 <div class="entrada_menu"> 
@@ -79,7 +79,7 @@
       <section class="menu-main">
           <div class="menu-carta">
             <div class="menu-titulo">
-              <h2 class="animate__animated animate__backInUp">Deliwoks</h2>
+              <h2 class="animate__animated animate__backInLeft">Deliwoks</h2>
             </div>
             <div class="wok-p">
                 <div id="arroz"> <b>Arroz frito,</b> con verdeo,zanahoria, huevo y jamón.</div>
