--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </ul>
         </div>    
         <div id="logo_foot"> 
-                <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
+                <img src="./imagenes/logo.png" alt="logo">
         </div>
     </footer>
 </body>
